@@ -97,19 +97,19 @@ case "${HOSTNAME}" in
     ecgate)
 	./configure --prefix=$HOME/local \
                     --with-netcdf=/home/ms/spdekplb/hmk/local/AIX \
-	            CC=xlc_r CFLAGS="-g -O -q64 -qMAXMEM=-1 -qarch=auto -DHAVE_MMAP -D_LARGE_FILES=1"
+	            CC=xlc_r CFLAGS="-O -q64 -qMAXMEM=-1 -qarch=auto -DHAVE_MMAP -D_LARGE_FILES=1"
 	;;
-# powerpc-ibm-aix5.1.0.0
-    hpcd*)
+# powerpc-ibm-aix5.3.0.0
+    hpc*)
 	./configure --prefix=$HOME/local \
                     --with-netcdf=/usr/local/lib/netcdf-3.5.0/LP64 \
-	            CC=xlc_r CFLAGS="-g -O -q64 -qMAXMEM=-1 -qarch=auto -DHAVE_MMAP -D_LARGE_FILES=1"
+	            CC=xlc_r CFLAGS="-O3 -q64 -qstrict -qarch=auto -qtune=auto -DHAVE_MMAP -D_LARGE_FILES=1"
 	;;
 # powerpc-ibm-aix5.2.0.0
     p020et01)
 	./configure --prefix=$HOME/local \
                     --with-netcdf=/uhome/mpikornb \
-	            CC=xlc_r CFLAGS="-g -O -q64 -qMAXMEM=-1 -qarch=auto -DHAVE_MMAP -D_LARGE_FILES=1"
+	            CC=xlc_r CFLAGS="-O -q64 -qMAXMEM=-1 -qarch=auto -DHAVE_MMAP -D_LARGE_FILES=1"
 	;;
 # hppa2.0w-hp-hpux11.11
     moon)
